# tenon.nvim

./: AGENTS.md  Cargo.toml
src/: chat.rs  keymap.rs  lib.rs  ui.rs  utils.rs
src/chat/: history.rs  mod.rs
src/clients/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src/config/: mod.rs  user.rs
src/mcp/: mod.rs
src/tools/: create_file.rs  edit_file.rs  fetch_webpage.rs  mod.rs  move_path.rs  read_file.rs  web_search.rs  write_file.rs
src/ui/: components.rs  mod.rs  picker.rs
src/ui/nvim_primitives/: buffer.rs  window.rs
src/ui/panels/: fixed.rs  mod.rs  swappable.rs
src/ui/widget/: display.rs  mod.rs
