[package]
name = "tenon-nvim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.32"
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "libuv", "mlua"] }
mlua = { version = "*", features = ["module", "serialize", "luajit"] }
reqwest = "0.13.2"
rig-core = "0.33.0"
rig-bedrock = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
